<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sigin_rlt_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f6f7"
    tools:context=".SigninActivity">

    <View
        android:id="@+id/signin_view_top_gradient"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/bg_start_activity" />

    <android.support.v7.widget.CardView
        android:id="@+id/signin_card_center"
        android:layout_width="310dp"
        android:layout_height="400dp"
        android:layout_below="@id/signin_view_top_gradient"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-150dp"
        android:visibility="visible"
        app:cardCornerRadius="40dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:id="@+id/sigin_rlt_main_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical">


            <ImageView
                android:id="@+id/siginin_img_logo"
                android:layout_width="138dp"
                android:layout_height="122dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_logo_main" />

            <RelativeLayout
                android:id="@+id/signin_rlt_sub_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/siginin_img_logo"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/signin_edt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/identity_no"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:textSize="16sp"
                    app:met_floatingLabel="normal" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/signin_edt_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signin_edt_email"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:textSize="16sp"
                    app:met_floatingLabel="normal" />

                <Button
                    android:id="@+id/signin_btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signin_edt_password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_btn_gradient"
                    android:elevation="0dp"
                    android:fontFamily="@font/poppins_medium"
                    android:minHeight="35dp"
                    android:paddingStart="65dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="65dp"
                    android:paddingBottom="10dp"
                    android:text="@string/login"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signin_btn_login"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/forgot_passowrd"
                    android:textColor="#40000000"
                    android:textSize="13sp" />

            </RelativeLayout>


        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/signin_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_view_top_gradient"
        android:layout_marginTop="-85dp"
        android:src="@drawable/ic_curved_line" />

</RelativeLayout>