<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f5f6f7">


    <android.support.v7.widget.CardView
        android:id="@+id/item_patient_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:theme="@style/AppThemeCard"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/item_patient_img_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_dots" />

            <RelativeLayout
                android:id="@+id/item_card_rlt_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/item_patient_txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Aziz Utku Kağıtcı"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/item_patient_txt_room_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/item_patient_txt_name"
                    android:fontFamily="@font/poppins_medium"
                    android:text="#315"
                    android:textColor="#B3000000" />

            </RelativeLayout>

            <View
                android:id="@+id/item_card_view_divider_1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/item_card_rlt_header"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="12dp"
                android:background="#10000000" />

            <LinearLayout
                android:id="@+id/item_card_lnr_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_card_view_divider_1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp">

                    <TextView
                        android:id="@+id/item_patient_txt_left_pulse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/pulse"
                        android:textColor="#B3000000" />

                    <TextView
                        android:id="@+id/item_patient_txt_pulse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/item_patient_img_pulse"
                        android:fontFamily="@font/poppins_medium"
                        android:text="101 bpm"
                        android:textColor="#B3000000" />

                    <ImageView
                        android:id="@+id/item_patient_img_pulse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="4dp"
                        app:srcCompat="@drawable/ic_pulse" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp">

                    <TextView
                        android:id="@+id/item_patient_txt_left_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/patient_temperature"
                        android:textColor="#B3000000" />

                    <TextView
                        android:id="@+id/item_patient_txt_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/item_patient_img_temp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="38 °C"
                        android:textColor="#B3000000" />

                    <ImageView
                        android:id="@+id/item_patient_img_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="4dp"
                        app:srcCompat="@drawable/ic_temperature" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp">

                    <TextView
                        android:id="@+id/item_patient_txt_left_temp_room"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/room_temperature"
                        android:textColor="#B3000000" />

                    <TextView
                        android:id="@+id/item_patient_txt_temp_room"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/item_patient_img_temp_room"
                        android:fontFamily="@font/poppins_medium"
                        android:text="24 °C"
                        android:textColor="#B3000000" />

                    <ImageView
                        android:id="@+id/item_patient_img_temp_room"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="4dp"
                        app:srcCompat="@drawable/ic_temperature" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true">


                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toStartOf="@id/item_patient_img_blood_pressure">


                            <TextView
                                android:id="@+id/item_patient_txt_blood_pressure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:text="122 mmHg"
                                android:textColor="#B3000000" />

                            <TextView
                                android:id="@+id/item_patient_txt_blood_pressure_small"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/item_patient_txt_blood_pressure"
                                android:fontFamily="@font/poppins_medium"
                                android:text="90 mmHg"
                                android:textColor="#B3000000" />

                        </RelativeLayout>

                        <ImageView
                            android:id="@+id/item_patient_img_blood_pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="4dp"
                            app:srcCompat="@drawable/ic_blood_pressure" />


                    </RelativeLayout>

                    <TextView
                        android:id="@+id/item_patient_txt_left_blood_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/blood_pressure"
                        android:textColor="#B3000000" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp">

                    <TextView
                        android:id="@+id/item_patient_txt_left_sugar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/blood_sugar"
                        android:textColor="#B3000000" />

                    <TextView
                        android:id="@+id/item_patient_txt_sugar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/item_patient_img_sugar"
                        android:fontFamily="@font/poppins_medium"
                        android:text="101 mg/dL"
                        android:textColor="#B3000000" />

                    <ImageView
                        android:id="@+id/item_patient_img_sugar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="4dp"
                        app:srcCompat="@drawable/ic_sugar" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp">

                    <TextView
                        android:id="@+id/item_patient_txt_left_brain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/brain_activity"
                        android:textColor="#B3000000" />

                    <TextView
                        android:id="@+id/item_patient_txt_brain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/item_patient_img_brain"
                        android:fontFamily="@font/poppins_medium"
                        android:text="OK"
                        android:textColor="#B3000000" />

                    <ImageView
                        android:id="@+id/item_patient_img_brain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="4dp"
                        app:srcCompat="@drawable/ic_brain" />
                </RelativeLayout>


            </LinearLayout>

            <ImageView
                android:id="@+id/item_patient_img_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundTintMode="src_in"
                android:tintMode="screen"
                app:srcCompat="@drawable/ic_circle_full" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>